Commit from HashBrown CMS

--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -8,11 +8,11 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "<h2 id=\"setting-up-a-synchronised-remote\">Setting up a synchronised remote</h2>\n\n<p>Hooking this up is easier than you might think.</p>\n\n<ul>\n\t<li>In the dashboard, click a project menu and select &quot;sync&quot;</li>\n\t<li>Fill in the API address of your remote HashBrown instance</li>\n\t<li>Save your settings</li>\n\t<li>Click &quot;Renew&quot; next to the &quot;API token&quot; field\n\t<ul>\n\t\t<li>Log in with your remote credentials</li>\n\t\t<li>An API token should now have been generated</li>\n\t</ul>\n\t</li>\n\t<li>Make sure the &quot;project&quot; name&nbsp;is correct for your remote project</li>\n\t<li>Save your settings again</li>\n\t<li><span>When you enter an environment, your remote resources should show up in the navigation sidebar with a faded &quot;remote&quot; icon next to their names</span></li>\n</ul>\n"
+        text: "<h2 id=\"setting-up-a-synchronised-remote\">Setting up a synchronised remote</h2>\n\n<p>Hooking this up is easy:</p>\n\n<ul>\n\t<li>In the dashboard, click a project menu and select &quot;sync&quot;</li>\n\t<li>Fill in the API address of your remote HashBrown instance</li>\n\t<li>Save your settings</li>\n\t<li>Click &quot;Renew&quot; next to the &quot;API token&quot; field\n\t<ul>\n\t\t<li>Log in with your remote credentials</li>\n\t\t<li>An API token should now have been generated</li>\n\t</ul>\n\t</li>\n\t<li>Make sure the &quot;project&quot; name&nbsp;is correct for your remote project</li>\n\t<li>Save your settings again</li>\n\t<li><span>When you enter an environment, your remote resources should show up in the navigation sidebar with a faded &quot;remote&quot; icon next to their names</span></li>\n</ul>\n"
     -
         template: buttons
         includeGrandchildren: false
-        text: "## Voila!\n\nThat's all there is to it."
+        text: "<h2 id=\"voila-\">Done!</h2>\n\n<p>That&#39;s all there is to it.</p>\n"
         buttons:
             -
                 text: 'More guides'
