Commit from HashBrown CMS

--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -4,7 +4,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Why synchronise?\n\nThere are several good reasons to synchronise one project with another. The most common 2 scenarios are:\n\n*   Working locally on remote content\n\n*   Using one project as a baseline for another"
+        text: "<h2 id=\"why-synchronise-\">Why synchronise?</h2>\n<p>There are several good reasons to synchronise one project with another. The most common 2 scenarios are:</p>\n<ul>\n<li>Working locally on remote content</li>\n<li>Using one project as a baseline for another</li>\n</ul>\n"
     -
         template: richTextSection
         includeGrandchildren: false
