Commit from HashBrown CMS

--- a/content/en/694f989fac00605ec96bfc473581e1f016ca8dbc.md
+++ b/content/en/694f989fac00605ec96bfc473581e1f016ca8dbc.md
@@ -1,6 +1,10 @@
 ---
 title: 'Creating a Schema'
 description: 'A quick guide on creating Schemas'
+sections:
+    -
+        template: richTextSection
+        text: "<h2 id=\"field-and-content-schemas\">Field and Content Schemas</h2>\n<p>So you may have noticed that there are 2 types of Schemas: Field and Content. They are configured more or less the same way, but serve very different purposes.</p>\n<h3 id=\"content-schema\">Content Schema</h3>\n<p>A Content Schema is used for pages and other nodes in the Content tree, such as global site settings.<br>All Content Schemas derive from the &quot;ContentBase&quot; Schema.<br>You can create a new Schema as a direct child of &quot;ContentBase&quot;, or you can use the &quot;Page&quot; Schema, if you are building a Schema for a web page.<br>Properties that are unique to Content Schemas:  </p>\n<ul>\n<li>Tabs for categorising your fields</li>\n<li>Default tab selector  </li>\n<li>Allowed Child Schemas for structuring your Content</li>\n</ul>\n<h3 id=\"field-schema\">Field Schema</h3>\n<p>A Field Schema is used for defining fields within a Content node.<br>Properties that are unique to Field Scemas:  </p>\n<ul>\n<li>Field editor for editing the value of the field</li>\n<li>Preview template for rendering friendly-looking versions of your fields (uses the <p>${ value }</p> syntax)</li>\n</ul>\n<h2 id=\"example-schema-configs\">Example Schema configs</h2>\n<p>Some examples on configuring Schemas can be found <a href=\"/docs/HashBrown.Client.Views.Editors.FieldEditors.html\">here</a> in the FieldEditors documentation.</p>\n"
 meta:
     id: 694f989fac00605ec96bfc473581e1f016ca8dbc
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
