--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -8,7 +8,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "<h2 id=\"intermediate\">Intermediate</h2>\n<ul>\n<li><a href=\"/guides/creating-a-schema/\">Creating a schema</a></li>\n<li><a href=\"/guides/synchronising-projects/\">Synchronising projects</a></li>\n<li><a href=\"/guides/email-setup/\">Email setup</a></li>\n<li><a href=\"/guides/https-setup/\">HTTPS setup</a></li>\n<li><a href=\"/guides/configuring-github-for-oauth-tokens/\">Configuring GitHub for OAuth tokens setup</a></li>\n</ul>\n"
+        text: "<h2 id=\"intermediate\">Intermediate</h2>\n<ul>\n<li><a href=\"/guides/creating-a-schema/\">Creating a Schema</a></li>\n<li><a href=\"/guides/synchronising-projects/\">Synchronising projects</a></li>\n<li><a href=\"/guides/email-setup/\">Email setup</a></li>\n<li><a href=\"/guides/https-setup/\">HTTPS setup</a></li>\n<li><a href=\"/guides/configuring-github-for-oauth-tokens/\">Configuring GitHub for OAuth tokens setup</a></li>\n</ul>\n"
 description: 'Learn how to get along with HashBrown'
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
