Commit from HashBrown CMS

--- a/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
+++ b/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
@@ -7,7 +7,7 @@ sections:
         text: "<h2 id=\"dependencies\">Dependencies</h2>\n\n<p>Make sure you have <a href=\"https://git-scm.com\">GIT</a>,&nbsp;<a href=\"http://nodejs.org\">node.js</a> and <a href=\"https://www.mongodb.com/download-center\">MongoDB</a> installed.</p>\n"
     -
         template: richTextSection
-        text: "## Download the source  \n\n### Download .zip\nYou can always pick up the latest HashBrown code [here](https://github.com/Putaitu/hashbrown-cms/archive/stable.zip).\n\n### Download with  GIT\nIf you'd rather stay up to date with GIT, just clone the 'stable' branch:  \n\n~~~\ngit clone https://github.com/Putaitu/hashbrown-cms.git -b stable --single-branch\n~~~"
+        text: "<h2 id=\"download-the-source\">Download the source</h2>\n<p>Clone the &#39;stable&#39; branch with GIT:</p>\n<pre><code>git clone https://github.com/Putaitu/hashbrown-cms.git -b stable --single-branch --recursive -j8\n</code></pre>"
     -
         template: richTextSection
         text: "<h2 id=\"get-the-node-js-dependencies\">Get the node.js dependencies</h2>\n\n<p>There are a couple dependencies to get before you can fire up HashBrown. Go into your installation directory and pull them from NPM:</p>\n\n<pre>\n<code>cd ./hashbrown-cms\nnpm install\n</code></pre>\n"
