--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -11,6 +11,7 @@ sections:
         text: "<h2 id=\"intermediate\">Intermediate</h2>\n<ul>\n<li><a href=\"/guides/creating-a-schema/\">Creating a Schema</a></li>\n<li><a href=\"/guides/synchronising-projects/\">Synchronising projects</a></li>\n<li><a href=\"/guides/email-setup/\">Email setup</a></li>\n<li><a href=\"/guides/https-setup/\">HTTPS setup</a></li>\n<li><a href=\"/guides/configuring-github-for-oauth-tokens/\">Configuring GitHub for OAuth tokens setup</a></li>\n</ul>\n"
     -
         text: "<h2 id=\"advanced\">Advanced</h2>\n<ul>\n<li><a href=\"/guides/creating-a-plugin/\">Creating a plugin</a></li>\n</ul>\n"
+        template: richTextSection
 description: 'Learn how to get along with HashBrown'
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
