Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -2,9 +2,6 @@
 title: 'HashBrown CMS'
 sections:
     -
-        useReddit: true
-        template: newsFeed
-    -
         template: buttons
         text: '## Getting started'
         buttons:
@@ -66,13 +63,13 @@ sections:
                 heading: Consistent
                 body: "<p>HashBrown is built on Node.js,&nbsp;<span>sharing data models with the client side code. MongoDB is used to store site data, as a document database most accurately reflects the content of a complex website. This means that the content is always format consistent, and&nbsp;there is no incompatible serialisation and deserialisation happening between client and server.</span></p>\n"
         template: featureGroup
-description: 'Create once. Publish anywhere.'
+description: 'A free and open source headless CMS'
 meta:
     id: 91f1ec2b984f291377c2dc488be2ebbefb46dd9a
     parentId: ""
     language: en
 date: '2016-9-5'
-author: Unknown
+author: 'Putaitu Development'
 permalink: /
 layout: sectionPage
 ---
