--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -63,7 +63,7 @@ sections:
                 heading: Consistent
                 body: "<p>HashBrown is built on Node.js,&nbsp;<span>sharing data models with the client side code. MongoDB is used to store site data, as a document database most accurately reflects the content of a complex website. This means that the content is always format consistent, and&nbsp;there is no incompatible serialisation and deserialisation happening between client and server.</span></p>\n"
         template: featureGroup
-description: 'A free and open source headless CMS'
+description: 'A free and open-source headless CMS'
 meta:
     id: 91f1ec2b984f291377c2dc488be2ebbefb46dd9a
     parentId: ""
