Commit from HashBrown CMS

--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -8,9 +8,9 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "<h2 id=\"intermediate\">Intermediate</h2>\n<ul>\n<li><a href=\"/guides/creating-a-schema/\">Creating a Schema</a></li>\n<li><a href=\"/guides/synchronising-projects/\">Synchronising projects</a></li>\n<li><a href=\"/guides/email-setup/\">Email setup</a></li>\n<li><a href=\"/guides/https-setup/\">HTTPS setup</a></li>\n<li><a href=\"/guides/configuring-github-for-oauth-tokens/\">Configuring GitHub for OAuth tokens setup</a></li>\n</ul>\n"
+        text: "<h2 id=\"intermediate\">Intermediate</h2>\n<ul>\n<li><a href=\"/guides/creating-a-schema/\">Creating a Schema</a></li>\n<li><a href=\"/guides/synchronising-projects/\">Synchronising projects</a></li>\n<li><a href=\"/guides/email-setup/\">Email setup</a></li>\n<li><a href=\"/guides/https-setup/\">HTTPS setup</a></li>\n<li><a href=\"/guides/configuring-github-for-oauth-tokens/\">Configuring GitHub for OAuth tokens setup</a></li>\n<li><a href=\"/guides/running-hashbrown-as-a-service/\">Running HashBrown as a service</a></li>\n</ul>\n"
     -
-        text: "<h2 id=\"advanced\">Advanced</h2>\n<ul>\n<li><a href=\"/guides/creating-a-plugin/\">Creating a plugin</a></li>\n</ul>\n"
+        text: "<p>&nbsp;</p>\n\n<h2 id=\"advanced\">Advanced</h2>\n\n<p>&nbsp;</p>\n\n<ul>\n\t<li><a href=\"/guides/creating-a-plugin/\">Creating a plugin</a></li>\n</ul>\n"
         template: richTextSection
 description: 'Learn how to get along with HashBrown'
 meta:
