Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -2,8 +2,11 @@
 title: 'HashBrown CMS'
 sections:
     -
+        template: newsFeed
+        useReddit: true
+    -
         template: buttons
-        text: '## Getting started'
+        text: "<h2 id=\"getting-started\">Getting started</h2>\n"
         buttons:
             -
                 text: 'Take me through it'
