Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -24,7 +24,7 @@ sections:
             -
                 text: Documentation
                 href: /docs/
-                target: _self
+                target: _blank
     -
         heading: 'Separate your concerns'
         subheading: 'HashBrown CMS has a truly modern approach to content management.'
