--- a/content/en/c0b6b1741c47f7237adba1636ffa20d1784efba9.md
+++ b/content/en/c0b6b1741c47f7237adba1636ffa20d1784efba9.md
@@ -5,6 +5,7 @@ sections:
     -
         template: richTextSection
         text: "<p>Please use the official <a href=\"https://github.com/Putaitu/hashbrown-jekyll-driver\">HashBrown Jekyll driver</a> and check out the <a href=\"https://github.com/Putaitu/hashbrown-jekyll-driver/tree/example\">example project</a></p>\n"
+level: beginner
 meta:
     id: c0b6b1741c47f7237adba1636ffa20d1784efba9
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
