--- a/content/en/a6f7583f30ca79f25daed414a73efbc749bcc0eb.md
+++ b/content/en/a6f7583f30ca79f25daed414a73efbc749bcc0eb.md
@@ -4,7 +4,8 @@ description: 'A quick guide on setting up HTTPS with HashBrown'
 sections:
     -
         template: richTextSection
-        text: "<p>Setting up HTTPS is dead easy these days, if you use Let&#39;s Encrypt.<br>DigitalOcean has some great guides on how to do it.  </p>\n<p><a href=\"https://www.digitalocean.com/community/tutorials/how-to-secure-apache-with-let-s-encrypt-on-centos-7\">Using Apache</a><br><a href=\"https://www.digitalocean.com/community/tutorials/how-to-secure-nginx-with-let-s-encrypt-on-ubuntu-16-04\">Using NGINX</a>  </p>\n"
+        text: "<p>Setting up HTTPS is dead easy these days, if you use Let&#39;s Encrypt.<br />\nDigitalOcean has some great guides on how to do it.</p>\n\n<p><a href=\"https://www.digitalocean.com/community/tutorials/how-to-secure-apache-with-let-s-encrypt-on-centos-7\">Using Apache</a><br />\n<a href=\"https://www.digitalocean.com/community/tutorials/how-to-secure-nginx-with-let-s-encrypt-on-ubuntu-16-04\">Using NGINX</a></p>\n"
+level: intermediate
 meta:
     id: a6f7583f30ca79f25daed414a73efbc749bcc0eb
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
