--- a/content/en/59cd34bfb36e7bca28a920256f9b0337c8859988.md
+++ b/content/en/59cd34bfb36e7bca28a920256f9b0337c8859988.md
@@ -5,6 +5,7 @@ sections:
     -
         template: richTextSection
         text: "<h2 id=\"setting-up-your-github-app\">Setting up your GitHub app</h2>\n\n<p>Go to <a href=\"https://github.com/settings/developers\">this page</a> and create a new OAuth app. Take note of the <strong>Client ID</strong> and <strong>Client Secret</strong> fields once you&#39;ve created it.</p>\n\n<p>Make sure to set the <strong>callback URL </strong>to this:</p>\n\n<pre>\n<code>/plugins/github/oauth/end\n</code></pre>\n\n<h2 id=\"the-config-file\">The config file</h2>\n\n<p>All you have to do to start using GitHub OAuth tokens is fill out the details in the config file located at:</p>\n\n<pre>\n<code>/config/plugins/github.cfg\n</code></pre>\n\n<p>The format of this file is as follows:</p>\n\n<pre>\n<code>{\n    // The client id\n    &quot;clientId&quot;: &quot;yourclientidhere&quot;,\n\n    // The client secret\n    &quot;clientSecret&quot;: &quot;yourclientsecrethere&quot;,\n}\n</code></pre>\n\n<p>Make sure to restart HashBrown after you&#39;ve filled in these details.</p>\n"
+level: intermediate
 meta:
     id: 59cd34bfb36e7bca28a920256f9b0337c8859988
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
