--- a/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
+++ b/content/en/5bd0de0803a611d57f91a45272bb49e5ba969c73.md
@@ -4,7 +4,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "<h2 id=\"why-synchronise-\">Why synchronise?</h2>\n<p>There are several good reasons to synchronise one project with another. The most common 2 scenarios are:</p>\n<ul>\n<li>Working locally on remote content</li>\n<li>Using one project as a baseline for another</li>\n</ul>\n"
+        text: "<p>&nbsp;</p>\n\n<h2 id=\"why-synchronise-\">Why synchronise?</h2>\n\n<p>&nbsp;</p>\n\n<p>&nbsp;</p>\n\n<p>There are several good reasons to synchronise one project with another. The most common 2 scenarios are:</p>\n\n<p>&nbsp;</p>\n\n<ul>\n\t<li>Working locally on remote content</li>\n\t<li>Using one project as a baseline for another</li>\n</ul>\n"
     -
         template: richTextSection
         includeGrandchildren: false
@@ -19,6 +19,7 @@ sections:
                 href: /guides/
                 target: _self
 description: 'A guide for linking 2 HashBrown instances together'
+level: advanced
 meta:
     id: 5bd0de0803a611d57f91a45272bb49e5ba969c73
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
