Commit from HashBrown CMS

--- a/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
+++ b/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
@@ -4,16 +4,17 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Layout\n\nIf there are any active projects on the server, they will be represented in the list under the \"projects\" headline. Every project has their own environments for managing content and users for editing it.\n\nBelow the project list are some basic server diagnostics to help you identify potential problems, or to determine whether the server might be overloaded from hosting too many projects. It will take a lot of projects for that to happen, so most people shouldn't worry about that."
+        text: "<h2 id=\"layout\">Layout</h2>\n\n<p>If there are any active projects on the server, they will be represented in the list under the &quot;projects&quot; headline. Every project has their own environments for managing content and users for editing it.</p>\n\n<p>Below the project list are some basic server diagnostics to help you identify potential problems, or to determine whether the server might be overloaded from hosting too many projects. It will take a lot of projects for that to happen, so most people shouldn&#39;t worry about that.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## For content authors\n\nThe only button relevant for you is the \"CMS\" button. So go ahead and click that to get started."
+        text: "<h2 id=\"for-content-authors\">For content authors</h2>\n\n<p>The only button relevant for you is the &quot;CMS&quot; button. So go ahead and click that to get started.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## For admins\n\nYou can create new projects, environments and backups with the \"+\" buttons and modify them with the \"...\" dropdown menus.\n\n### Backups\n\nTo access the backups dialog, click the \"...\" dropdown menu in the top right of a project and click \"backups\". You can then upload, create, restore, download or delete backups. An important thing to keep in mind is that all content on all environments will be replaced when restoring a backup, so it's always a good idea to create a new backup first, in case the changes are drastic.\n\nThe backup only restores settings, content and schemas to the project, it doesn't publish anything. You can republish the content tree in the project CMS."
+        text: "<h2 id=\"for-admins\">For admins</h2>\n\n<p>You can create new projects, environments and backups with the &quot;+&quot; buttons and modify them with the &quot;...&quot; dropdown menus.</p>\n\n<h3 id=\"backups\">Backups</h3>\n\n<p>To access the backups dialog, click the &quot;...&quot; dropdown menu in the top right of a project and click &quot;backups&quot;. You can then upload, create, restore, download or delete backups. An important thing to keep in mind is that all content on all environments will be replaced when restoring a backup, so it&#39;s always a good idea to create a new backup first, in case the changes are drastic.</p>\n\n<p>The backup only restores settings, content and schemas to the project, it doesn&#39;t publish anything. You can republish the content tree in the project CMS.</p>\n"
 description: 'This is a quick walthrough of the available features in the dashboard'
+level: beginner
 meta:
     id: 490cc8c9030417a77f649c8e525df788fc294b3a
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
