Commit from HashBrown CMS

--- a/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
+++ b/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
@@ -4,36 +4,37 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Content pane\n\nThis is where all of the authored work, aka. [Content](/docs/content/), is. From here you can create, delete, move, rename, copy and paste content to your heart's desire."
+        text: "<h2 id=\"content-pane\">Content pane</h2>\n\n<p>This is where all of the authored work, aka. <a href=\"/docs/content/\">Content</a>, is. From here you can create, delete, move, rename, copy and paste content to your heart&#39;s desire.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Media\n\nAn asset library for your hosted files, such as images, videos, PDFs and whatnot."
+        text: "<h2 id=\"media\">Media</h2>\n\n<p>An asset library for your hosted files, such as images, videos, PDFs and whatnot.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Forms\n\nIf you need an input form on your website, you can create the model for it here and see a list of the user submitted input."
+        text: "<h2 id=\"forms\">Forms</h2>\n\n<p>If you need an input form on your website, you can create the model for it here and see a list of the user submitted input.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Connections (scoped)\n\nA list of endpoints and resources for your content. Connections can be set up to publish your content to other servers, provide statically hosted media and serve rendering templates."
+        text: "<h2 id=\"connections-scoped-\">Connections (scoped)</h2>\n\n<p>A list of endpoints and resources for your content. Connections can be set up to publish your content to other servers, provide statically hosted media and serve rendering templates.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Schemas (scoped)\n\nA library of content structures. Here you define how your editable content looks and behaves. You can define schemas for both content nodes and fields."
+        text: "<h2 id=\"schemas-scoped-\">Schemas (scoped)</h2>\n\n<p>A library of content structures. Here you define how your editable content looks and behaves. You can define schemas for both content nodes and fields.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Users (scoped)\n\nAll of the users connected to this project. Here you can edit scopes and remove/add new users."
+        text: "<h2 id=\"users-scoped-\">Users (scoped)</h2>\n\n<p>All of the users connected to this project. Here you can edit scopes and remove/add new users.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Settings (scoped)\n\nThe global project settings, such as which languages are in use."
+        text: "<h2 id=\"settings-scoped-\">Settings (scoped)</h2>\n\n<p>The global project settings, such as which languages are in use.</p>\n"
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Main menu\n\nThe main menu just has a few menu points:\n\n*   The user menu, for editing your info or logging out\n*   The dashboard link, for returning to the dashboard\n*   The language picker, if more then one language has been set up in the \"Settings\" pane"
+        text: "<h2 id=\"main-menu\">Main menu</h2>\n\n<p>The main menu just has a few menu points:</p>\n\n<ul>\n\t<li>The user menu, for editing your info or logging out</li>\n\t<li>The dashboard link, for returning to the dashboard</li>\n\t<li>The language picker, if more then one language has been set up in the &quot;Settings&quot; pane</li>\n</ul>\n"
 description: 'This is a quick overview of what you''re seeing when you first open up the CMS.'
+level: beginner
 meta:
     id: 41003afd7b3d02a2434516a6243a71eab1d1a30f
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
