--- a/content/en/50206727b65fd2aab0e801e81407420ecd516042.md
+++ b/content/en/50206727b65fd2aab0e801e81407420ecd516042.md
@@ -5,6 +5,7 @@ sections:
     -
         template: richTextSection
         text: "<p>Please use the official <a href=\"https://github.com/Putaitu/hashbrown-node-driver\">HashBrown node driver</a> and check out the <a href=\"https://github.com/Putaitu/hashbrown-node-driver/tree/example\">example project</a></p>\n"
+level: beginner
 meta:
     id: 50206727b65fd2aab0e801e81407420ecd516042
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
