Commit from HashBrown CMS

--- a/content/en/b50e45225dcbf6bb03b84d6e89ab3761c58d7f40.md
+++ b/content/en/b50e45225dcbf6bb03b84d6e89ab3761c58d7f40.md
@@ -5,6 +5,7 @@ sections:
     -
         template: richTextSection
         text: "<h2 id=\"requirements\">Requirements</h2>\n\n<p>To do this, all you need is a fairly recent Linux OS on your server with <a href=\"https://en.wikipedia.org/wiki/Systemd\">systemd</a> as the init system.</p>\n\n<h2 id=\"creating-a-systemd-service-file\">Creating a systemd Service File</h2>\n\n<p>Create a new file with your preferred text editor:</p>\n\n<pre>\n<code>$ sudo vi /lib/systemd/system/hashbrown.service\n</code></pre>\n\n<p>Type/paste the following into the file:</p>\n\n<pre>\n<code>[Unit]\nDescription=HashBrown CMS \nDocumentation=https://hashbrown.rocks\nAfter=network.target\n\n[Service]\nEnvironment=PORT=8080 (or whichever port you want to run it on)\nType=simple\nUser=username (never root!)\nExecStart=node /path/to/hashbrown-cms/hashbrown.js\nRestart=always\n\n[Install]\nWantedBy=multi-user.target\n</code></pre>\n\n<h2 id=\"reload-the-daemon\">Reload the daemon</h2>\n\n<pre>\n<code>$ sudo systemctl daemon-reload\n</code></pre>\n\n<h2 id=\"start-the-service\">Start the service</h2>\n\n<pre>\n<code>$ sudo systemctl start hashbrown\n</code></pre>\n"
+level: advanced
 meta:
     id: b50e45225dcbf6bb03b84d6e89ab3761c58d7f40
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
