--- a/content/en/4dcdb28391ba6837c55dc722251f3d64be60f79f.md
+++ b/content/en/4dcdb28391ba6837c55dc722251f3d64be60f79f.md
@@ -4,7 +4,8 @@ description: 'An overview of the terminal commands'
 sections:
     -
         template: richTextSection
-        text: "<h2 id=\"create-user\">Create user</h2>\n<pre><code>node hashbrown.js create-user u=[username] p=[password] admin=[true/false]\n</code></pre><h2 id=\"make-user-admin\">Make user admin</h2>\n<pre><code>node hashbrown.js make-user-admin u=[username]\n</code></pre><h2 id=\"revoke-tokens\">Revoke tokens</h2>\n<pre><code>node hashbrownjs revoke-tokens u=[username]\n</code></pre><h2 id=\"set-user-scopes\">Set user scopes</h2>\n<pre><code>node hashbrown.js set-user-scopes u=[username] p=[project] s=[templates,connections,schemas]\n</code></pre><h2 id=\"set-user-password\">Set user password</h2>\n<pre><code>node hashbrown.js set-user-password u=[username] p=[password]\n</code></pre>"
+        text: "<p>&nbsp;</p>\n\n<h2 id=\"create-user\">Create user</h2>\n\n<p>&nbsp;</p>\n\n<pre>\n<code>node hashbrown.js create-user u=[username] p=[password] admin=[true/false]\n</code></pre>\n\n<h2 id=\"make-user-admin\">Make user admin</h2>\n\n<pre>\n<code>node hashbrown.js make-user-admin u=[username]\n</code></pre>\n\n<h2 id=\"revoke-tokens\">Revoke tokens</h2>\n\n<pre>\n<code>node hashbrownjs revoke-tokens u=[username]\n</code></pre>\n\n<h2 id=\"set-user-scopes\">Set user scopes</h2>\n\n<pre>\n<code>node hashbrown.js set-user-scopes u=[username] p=[project] s=[templates,connections,schemas]\n</code></pre>\n\n<h2 id=\"set-user-password\">Set user password</h2>\n\n<pre>\n<code>node hashbrown.js set-user-password u=[username] p=[password]\n</code></pre>\n"
+level: advanced
 meta:
     id: 4dcdb28391ba6837c55dc722251f3d64be60f79f
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
