--- a/content/en/694f989fac00605ec96bfc473581e1f016ca8dbc.md
+++ b/content/en/694f989fac00605ec96bfc473581e1f016ca8dbc.md
@@ -4,7 +4,7 @@ description: 'A quick guide on creating Schemas'
 sections:
     -
         template: richTextSection
-        text: "<h2 id=\"field-and-content-schemas\">Field and Content Schemas</h2>\n\n<p>So you may have noticed that there are 2 types of Schemas: Field and Content. They are configured more or less the same way, but serve very different purposes.</p>\n\n<h3 id=\"content-schema\">Content Schema</h3>\n\n<p>A Content Schema is used for pages and other nodes in the Content tree, such as global site settings.<br />\nAll Content Schemas derive from the &quot;ContentBase&quot; Schema.<br />\nYou can create a new Schema as a direct child of &quot;ContentBase&quot;, or you can use the &quot;Page&quot; Schema, if you are building a Schema for a web page.<br />\nProperties that are unique to Content Schemas:</p>\n\n<ul>\n\t<li>Tabs for categorising your fields</li>\n\t<li>Default tab selector</li>\n\t<li>Allowed Child Schemas for structuring your Content</li>\n</ul>\n\n<h3 id=\"field-schema\">Field Schema</h3>\n\n<p>A Field Schema is used for defining fields within a Content node.<br />\nProperties that are unique to Field Scemas:</p>\n\n<ul>\n\t<li>Field editor for editing the value of the field</li>\n\t<li>Preview template for rendering friendly-looking versions of your fields (uses the <code>&lt;p&gt;${ value }&lt;/p&gt;</code> syntax)</li>\n</ul>\n"
+        text: "<h2 id=\"field-and-content-schemas\">Field and Content Schemas</h2>\n\n<p>So you may have noticed that there are 2 types of Schemas: Field and Content. They are configured more or less the same way, but serve very different purposes.</p>\n\n<h3 id=\"content-schema\">Content Schema</h3>\n\n<p>A Content Schema is used for pages and other nodes in the Content tree, such as global site settings.<br />\nAll Content Schemas derive from the &quot;ContentBase&quot; Schema.<br />\nYou can create a new Schema as a direct child of &quot;ContentBase&quot;, or you can use the &quot;Page&quot; Schema, if you are building a Schema for a web page.<br />\nProperties that are unique to Content Schemas:</p>\n\n<ul>\n\t<li>Tabs for categorising your fields</li>\n\t<li>Default tab selector</li>\n\t<li>Allowed Child Schemas for structuring your Content</li>\n</ul>\n\n<h3 id=\"field-schema\">Field Schema</h3>\n\n<p>A Field Schema is used for defining fields within a Content node.<br />\nProperties that are unique to Field Scemas:</p>\n\n<ul>\n\t<li>Field editor for editing the value of the field</li>\n</ul>\n"
 level: beginner
 meta:
     id: 694f989fac00605ec96bfc473581e1f016ca8dbc
