Commit from HashBrown CMS

--- a/content/en/e235b8c399b4f0589762431fa449a41ec1a91274.md
+++ b/content/en/e235b8c399b4f0589762431fa449a41ec1a91274.md
@@ -4,7 +4,7 @@ description: 'An example on how to configure the MongoDB database'
 sections:
     -
         template: richTextSection
-        text: "<p>&nbsp;</p>\n\n<h2 id=\"the-config-file\">The config file</h2>\n\n<p>&nbsp;</p>\n\n<p>The config file for the database is located here (you need to create it initially):</p>\n\n<pre>\n<code>/config/database.cfg\n</code></pre>\n\n<p>Here is an example config:</p>\n\n<pre>\n<code>{\n    &quot;username&quot;: &quot;myuser&quot;,\n    &quot;password&quot;: &quot;mypassword&quot;,\n    &quot;url&quot;: &quot;urltomydatabase.com&quot;,\n    &quot;port&quot;: 1234\n    &quot;options&quot;: {\n        &quot;authSource&quot;: &quot;admin&quot;\n    }\n}\n</code></pre>\n\n<p>More information on the available options for MongoDB can be found <a href=\"https://docs.mongodb.com/manual/reference/connection-string/#connections-connection-options\">here</a></p>\n"
+        text: "<h2 id=\"the-config-file\">The config file</h2>\n<p>The config file for the database is located here (you need to create it initially):</p>\n<pre><code>/config/database.cfg\n</code></pre><p>Here is an example config:</p>\n<pre><code>{\n    &quot;username&quot;: &quot;myuser&quot;,\n    &quot;password&quot;: &quot;mypassword&quot;,\n    &quot;url&quot;: &quot;urltomydatabase.com&quot;,\n    &quot;port&quot;: 1234,\n    &quot;prefix&quot;: &quot;hb_&quot;,\n    &quot;options&quot;: {\n        &quot;authSource&quot;: &quot;admin&quot;\n    }\n}\n</code></pre><h2 id=\"about-using-the-prefix\">About using the prefix</h2>\n<p>If you&#39;re adding a prefix to an existing HashBrown instance, you need to move your databases in order to rename them. Here&#39;s an example of how to rename your databases:</p>\n<pre><code>$ mongo\n\n$ use users\n$ db.copyDatabase(&quot;users&quot;, &quot;hb_users&quot;, &quot;localhost&quot;)\n$ db.dropDatabase()\n\n$ use schedule\n$ db.copyDatabase(&quot;schedule&quot;, &quot;hb_schedule&quot;, &quot;localhost&quot;)\n$ db.dropDatabase()\n\n$ use 876123hgj1376\n$ db.copyDatabase(&quot;876123hgj1376&quot;, &quot;hb_876123hgj1376&quot;, &quot;localhost&quot;)\n$ db.dropDatabase()\n</code></pre><h2 id=\"mongodb-options\">MongoDB options</h2>\n<p>More information on the available options for MongoDB can be found <a href=\"https://docs.mongodb.com/manual/reference/connection-string/#connections-connection-options\">here</a></p>\n"
 level: advanced
 meta:
     id: e235b8c399b4f0589762431fa449a41ec1a91274
