--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -1,5 +1,5 @@
 ---
-title: Home
+title: 'HashBrown CMS'
 sections:
     -
         template: newsFeed
@@ -73,6 +73,6 @@ meta:
     language: en
 date: '2016-9-5'
 author: 'Putaitu Development'
-permalink: /
+permalink: /hashbrown-cms/
 layout: sectionPage
 ---
