Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -73,6 +73,6 @@ meta:
     language: en
 date: '2016-9-5'
 author: 'Putaitu Development'
-permalink: /hashbrown-cms/
+permalink: /
 layout: sectionPage
 ---
